Update Java Notes